Announcement added. Technical Committee Updated

--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -226,18 +226,6 @@
         <td>Amity University</td>
       </tr>
       <tr>
-        <td>AJAY KUMARA M A</td>
-        <td>Lenoir-Rhyne University, NC USA</td>
-      </tr>
-      <tr>
-        <td>Akanksha Singh</td>
-        <td>Chandigarh University</td>
-      </tr>
-      <tr>
-        <td>Akshat Agrawal</td>
-        <td>Amity University Haryana</td>
-      </tr>
-      <tr>
         <td>Akshay S</td>
         <td>Amrita Vishwa Vidyapeetham, Mysuru Campus</td>
       </tr>
@@ -250,28 +238,8 @@
         <td>M.M.E.C,MMDU</td>
       </tr>
       <tr>
-        <td>Amit Jain</td>
-        <td>O P Jindal University, Raigarh</td>
-      </tr>
-      <tr>
-        <td>Anand Nayyar</td>
-        <td>Duy Tan University, Vietnam</td>
-      </tr>
-      <tr>
-        <td>Anand Kumar M</td>
-        <td>National Institute of Technology Karnataka</td>
-      </tr>
-      <tr>
         <td>Aniket Sundriyal</td>
         <td>Amazon</td>
-      </tr>
-      <tr>
-        <td>Anisha Prima Rodrigues</td>
-        <td>NMAM Institute of Technology</td>
-      </tr>
-      <tr>
-        <td>Anita Dixit</td>
-        <td>SDM College of Engineering and Technology</td>
       </tr>
       <tr>
         <td>ANKUR KUMAR GUPTA</td>
@@ -283,15 +251,11 @@
       </tr>
       <tr>
         <td>Anupam Pattanayak</td>
-        <td>IIIT Guwahati</td>
+        <td>Raja Narendralal Khan Women's College (Autonomous)</td>
       </tr>
       <tr>
         <td>Anurag Satpathy</td>
         <td>Missouri University of Science and Technology</td>
-      </tr>
-      <tr>
-        <td>Anusha Jain</td>
-        <td>Rashtreeya Vidyalaya College of Engineering</td>
       </tr>
       <tr>
         <td>Archana Mathur</td>
@@ -302,32 +266,16 @@
         <td>Jain University</td>
       </tr>
       <tr>
-        <td>Arokia Paul R Rajan</td>
-        <td>Christ University</td>
-      </tr>
-      <tr>
-        <td>Arun Kumar</td>
-        <td>NIT Rourkela</td>
-      </tr>
-      <tr>
-        <td>Arvind Kumar</td>
-        <td>MANAV RACHNA INTERNATIONAL INSTITUTE OF RESEARCH AND STUDIES</td>
+        <td>Arti Arya</td>
+        <td>PES University</td>
       </tr>
       <tr>
         <td>BABU KUMAR S</td>
         <td>CHRIST (DEEMED TO BE UNIVERSITY)</td>
       </tr>
       <tr>
-        <td>BASAVARAJ PATIL</td>
-        <td>Dayananda Sagar College of Engineering</td>
-      </tr>
-      <tr>
         <td>Bhagath Parabattina</td>
         <td>Lakireddy Bali Reddy College of Engineering Mylavaram</td>
-      </tr>
-      <tr>
-        <td>Bharatesh Chakravarthi</td>
-        <td>Arizona State University</td>
       </tr>
       <tr>
         <td>Bhavani Sankar Panda</td>
@@ -338,32 +286,8 @@
         <td>Manipal University Jaipur</td>
       </tr>
       <tr>
-        <td>BISWAJEET SETHI</td>
-        <td>IIT kharagpur</td>
-      </tr>
-      <tr>
-        <td>Chandan Chetri</td>
-        <td>Jorhat Engineering College</td>
-      </tr>
-      <tr>
         <td>CHANDANI SHARMA</td>
         <td>Maharishi Markandeshwar University</td>
-      </tr>
-      <tr>
-        <td>Chander Prabha</td>
-        <td>Chitkara University Institute of Engineering and Technology</td>
-      </tr>
-      <tr>
-        <td>Debashisha Jena</td>
-        <td>NITK, Surathkal</td>
-      </tr>
-      <tr>
-        <td>Dhiraj Sangwan</td>
-        <td>CSIR-CEERI, Pilani</td>
-      </tr>
-      <tr>
-        <td>Dilip Kumar Dalei</td>
-        <td>DRDO</td>
       </tr>
       <tr>
         <td>Dr DHANANJAYA REDDY</td>
@@ -374,20 +298,8 @@
         <td>K J Somaiya College of Engineering</td>
       </tr>
       <tr>
-        <td>Dr Pramod Sharma</td>
-        <td>Regional College for Education Research and Technology, Jaipur</td>
-      </tr>
-      <tr>
-        <td>Dr Rahul Shukla</td>
-        <td>Deshbandhu College, University of Delhi</td>
-      </tr>
-      <tr>
         <td>Dr Ramesh Cheripelli</td>
         <td>Vidya Jyothi Institute of Technology</td>
-      </tr>
-      <tr>
-        <td>Dr Soumya Ranjan Mishra</td>
-        <td>KIIT University</td>
       </tr>
       <tr>
         <td>Dr Subidh Ali</td>
@@ -398,31 +310,8 @@
         <td>Ramaiah Institute of Technology</td>
       </tr>
       <tr>
-        <td>Dr. CH HUSSAIAN BASHA</td>
-        <td>Nitte Meenakshi Institute of Technology</td>
-      </tr>
-      <tr>
         <td>Dr. Abhishek Saxena</td>
         <td>Manav Rachna University, Faridabad, Haryana</td>
-      </tr>
-      <tr>
-        <td>Dr. Ahteshamul Haq</td>
-        <td>
-          Department of Mathematics & Statistics, Integral University Lucknow
-          INDIA
-        </td>
-      </tr>
-      <tr>
-        <td>Dr. Anjali Munde</td>
-        <td>University of Southampton Malaysia</td>
-      </tr>
-      <tr>
-        <td>Dr. Anushree Tripathi</td>
-        <td>National Institute of Technology Patna</td>
-      </tr>
-      <tr>
-        <td>Dr. Asha S Manek</td>
-        <td>Global Academy of Technology</td>
       </tr>
       <tr>
         <td>Dr. Ashoka D V</td>
@@ -431,10 +320,6 @@
       <tr>
         <td>Dr. Binita H. Thakkar</td>
         <td>VIVA College of Arts, Commerce and Science, Virar W, Mumbai</td>
-      </tr>
-      <tr>
-        <td>Dr. Divya C D</td>
-        <td>Vidyavardhaka College of Engineering</td>
       </tr>
       <tr>
         <td>Dr. Kalpesh A Popat</td>
@@ -449,23 +334,12 @@
         <td>JSS S&T University, Mysore</td>
       </tr>
       <tr>
-        <td>Dr. Mitali M Nayak</td>
-        <td>ITER, Siksha O Anusandhan</td>
-      </tr>
-      <tr>
         <td>Dr. Monica Bhutani</td>
         <td>Bharati Vidyapeeth's College of Engineering</td>
       </tr>
       <tr>
-        <td>Dr. Monika</td>
+        <td>Dr. Monika .</td>
         <td>PIET</td>
-      </tr>
-      <tr>
-        <td>Dr. Pankaj Dadheech</td>
-        <td>
-          Swami Keshvanand Institute of Technology, Management & Gramothan,
-          Jaipur
-        </td>
       </tr>
       <tr>
         <td>Dr. Pramod Kumar S</td>
@@ -485,14 +359,13 @@
           Prestige Institute of Engineering Management and Research Indore
         </td>
       </tr>
-
       <tr>
         <td>Dr. R. Ashok Kumar</td>
         <td>BMS College of Engineering</td>
       </tr>
       <tr>
         <td>Dr. Rahul Soni</td>
-        <td>Navrachana University</td>
+        <td>Navrachana University, Vadodara, Gujarat</td>
       </tr>
       <tr>
         <td>Dr. Rama Devi Burri</td>
@@ -519,27 +392,23 @@
         <td>Model Institute of Engineering and Technology, Jammu</td>
       </tr>
       <tr>
-        <td>Dr. Sunil</td>
+        <td>Dr. Sunil .</td>
         <td>Jamia Millia Islamia (A Central University), New Delhi</td>
       </tr>
       <tr>
-        <td>Dr. Vinay Kumar Jadoun</td>
-        <td>Manipal Institute of Technology, Manipal</td>
-      </tr>
-      <tr>
-        <td>Dr. Anitha N</td>
+        <td>Dr.Anitha N</td>
         <td>BNM Institute of Technology</td>
       </tr>
       <tr>
-        <td>Dr. Padmashree T</td>
-        <td>R.V. College of Engineering</td>
+        <td>Dr.Padmashree T</td>
+        <td>R.V.College of Engineering</td>
       </tr>
       <tr>
-        <td>Dr. Pratik A Vanjara</td>
+        <td>Dr.Pratik A Vanjara</td>
         <td>M.P. Shah Commerce College Surendranagar</td>
       </tr>
       <tr>
-        <td>Dr. Sathish Kumar S</td>
+        <td>Dr.Sathish Kumar S</td>
         <td>RNSIT</td>
       </tr>
       <tr>
@@ -549,24 +418,12 @@
         </td>
       </tr>
       <tr>
-        <td>Eleni G. Makri</td>
-        <td>Unicaf</td>
-      </tr>
-      <tr>
-        <td>Elizabeth M J</td>
-        <td>NITC</td>
-      </tr>
-      <tr>
         <td>Era Johri</td>
         <td>KJSCE</td>
       </tr>
       <tr>
-        <td>Farooque Azam</td>
-        <td>REVA University</td>
-      </tr>
-      <tr>
-        <td>Ganesh Khekare</td>
-        <td>Vellore Institute of Technology, Vellore</td>
+        <td>Eleni G. Makri</td>
+        <td>Unicaf</td>
       </tr>
       <tr>
         <td>Gang Li</td>
@@ -583,10 +440,6 @@
       <tr>
         <td>Hariharan Shanmugasundaram</td>
         <td>Vardhaman College of Engineering</td>
-      </tr>
-      <tr>
-        <td>Harshil V Joshi</td>
-        <td>Charotar University of Science and Technology</td>
       </tr>
       <tr>
         <td>Hema Priya N</td>
@@ -615,10 +468,6 @@
         <td>KIIT Deemed to be University</td>
       </tr>
       <tr>
-        <td>Jaydeep R Ramani</td>
-        <td>Atmiya University Rajkot</td>
-      </tr>
-      <tr>
         <td>Jenefa J</td>
         <td>Chrsit University</td>
       </tr>
@@ -627,48 +476,20 @@
         <td>CHRIST UNIVERSITY</td>
       </tr>
       <tr>
-        <td>Kakelli Anil Kumar</td>
-        <td>Vellore Institute of Technology, Vellore</td>
-      </tr>
-      <tr>
-        <td>Kalpana Rai</td>
-        <td>Sagar Institute of Research & Technology-Excellence, Bhopal</td>
-      </tr>
-      <tr>
-        <td>Karthika Natarajan</td>
-        <td>VIT-AP university</td>
-      </tr>
-      <tr>
         <td>Kaushal Pratap Sengar</td>
         <td>Madhav Institute of Technology and Science, Gwalior</td>
       </tr>
       <tr>
-        <td>Kaviyaraj R</td>
-        <td>SRM Institute of Science and Technology</td>
-      </tr>
-      <tr>
-        <td>Keshav Prof. Kaushik</td>
-        <td>University of Petroleum and Energy Studies</td>
-      </tr>
-      <tr>
-        <td>Keshav Sood</td>
-        <td>Deakin Uni</td>
+        <td>keerthan TG</td>
+        <td>SIT</td>
       </tr>
       <tr>
         <td>Khoirom Johnson Singh</td>
         <td>Indian Institute of Technology Roorkee</td>
       </tr>
       <tr>
-        <td>Komal Mehta Bhagat</td>
-        <td>Bhagwan Parshuram Institute of Technology</td>
-      </tr>
-      <tr>
         <td>Latha Tamilselvan</td>
         <td>B.S.Abdur Rahman Crescent Institute of Science and Technology</td>
-      </tr>
-      <tr>
-        <td>LIJA JACOB</td>
-        <td>Christ University</td>
       </tr>
       <tr>
         <td>Maamar Bougherara</td>
@@ -691,10 +512,6 @@
         <td>SASTRA Deemed University</td>
       </tr>
       <tr>
-        <td>Manisha Verma</td>
-        <td>Pratap University, Jaipur</td>
-      </tr>
-      <tr>
         <td>Manjula Gururaj Rao</td>
         <td>
           NITTE (Deemed to be University), NMAM Institute of Technology Nitte
@@ -705,16 +522,8 @@
         <td>Tolani Maritime Institute Pune</td>
       </tr>
       <tr>
-        <td>Mausumi Goswami</td>
-        <td>CHRIST (Deemed to be University), Bangalore 560074, India</td>
-      </tr>
-      <tr>
         <td>Md Afroz</td>
         <td>Al Faisal University, Prince Sultan College of Business</td>
-      </tr>
-      <tr>
-        <td>MD Ruhul Amin</td>
-        <td>Shahjalal University of Science and Technology</td>
       </tr>
       <tr>
         <td>Md Tofael Ahmed</td>
@@ -725,36 +534,12 @@
         <td>K L E Technological University, Hubli</td>
       </tr>
       <tr>
-        <td>Mehtab Singh</td>
-        <td>Chandigarh University</td>
-      </tr>
-      <tr>
-        <td>Mijanur Rahaman Seikh</td>
-        <td>Kazi Nazrul University</td>
-      </tr>
-      <tr>
         <td>Mithra Venkatesan</td>
         <td>D.Y.Patil Institute of Technology Pimpri Pune 411018</td>
       </tr>
       <tr>
         <td>Mithun B N</td>
         <td>CHRIST (Deemed to be University)</td>
-      </tr>
-      <tr>
-        <td>monali prajapati</td>
-        <td>Government Polytechnic, Ahmedabad</td>
-      </tr>
-      <tr>
-        <td>Monika Mangla</td>
-        <td>Dwarkadas J Sanghvi College of Engineering</td>
-      </tr>
-      <tr>
-        <td>Mrutyunjaya . S Yalawar</td>
-        <td>CMR ENGINEERING COLLEGE HYDERABAD</td>
-      </tr>
-      <tr>
-        <td>Murugan A.S.S.</td>
-        <td>CVR College of Engineering</td>
       </tr>
       <tr>
         <td>NAGARAJA G S</td>
@@ -773,16 +558,8 @@
         <td>JSS Academy of Technical Education</td>
       </tr>
       <tr>
-        <td>Naveen Kumar</td>
-        <td>Christ University, Bangalore</td>
-      </tr>
-      <tr>
         <td>Nebojsa Bacanin</td>
         <td>Singidunum University</td>
-      </tr>
-      <tr>
-        <td>Nikhil Govil</td>
-        <td>GLA UNIVERSITY, MATHURA</td>
       </tr>
       <tr>
         <td>NIKHIL SHARMA</td>
@@ -808,36 +585,20 @@
         <td>ITS Engineering College, Greater Noida</td>
       </tr>
       <tr>
-        <td>Nuparam Chauhan</td>
-        <td>Teerthanker Mahaveer University</td>
-      </tr>
-      <tr>
-        <td>Pascal Lorenz</td>
-        <td>University of Haute-Alsace</td>
-      </tr>
-      <tr>
-        <td>Pavan Kumar B N</td>
-        <td>IIIT SriCity</td>
+        <td>Pooja Agarwal</td>
+        <td>PES University, Bangalore</td>
       </tr>
       <tr>
         <td>Pooja Chaturvedi</td>
         <td>Institute of Technology, Nirma University, Ahmedabad</td>
       </tr>
       <tr>
-        <td>Poonam Jindal</td>
-        <td>Chitkara University</td>
-      </tr>
-      <tr>
-        <td>Pramit Brata Chanda</td>
+        <td>pramit brata chanda</td>
         <td>Kalyani Govt. Engg. College(KGEC, WB)</td>
       </tr>
       <tr>
         <td>Pramit Mazumdar</td>
         <td>Indian Institute of Information Technology Vadodara</td>
-      </tr>
-      <tr>
-        <td>Praveen K Shukla</td>
-        <td>BBDU</td>
       </tr>
       <tr>
         <td>PRAVEENA T</td>
@@ -848,16 +609,14 @@
         <td>Poornima College of Engineering</td>
       </tr>
       <tr>
+        <td>Preethi P</td>
+        <td>
+          Prof., Dept. of Computer Science PES UNIVERSITY Bangalore, India
+        </td>
+      </tr>
+      <tr>
         <td>Prema B Sahane</td>
         <td>JSPM's RSCOE</td>
-      </tr>
-      <tr>
-        <td>Priya L</td>
-        <td>Rajalakshmi engineering college</td>
-      </tr>
-      <tr>
-        <td>Priyanka Bhaskar</td>
-        <td>Central University of Rajasthan, Ajmer</td>
       </tr>
       <tr>
         <td>Prof. K Thamizhmaran</td>
@@ -874,14 +633,6 @@
       <tr>
         <td>R KAVITHA</td>
         <td>SIDDHARTHA INSTITUTE OF ENGINEERING & TECHNOLOGY</td>
-      </tr>
-      <tr>
-        <td>Radha B</td>
-        <td>sri krishna arts and science college</td>
-      </tr>
-      <tr>
-        <td>Raghavendra C K</td>
-        <td>B N M Institute of Technology</td>
       </tr>
       <tr>
         <td>Rahul Makkar</td>
@@ -908,36 +659,20 @@
         <td>Netaji Subhash Engineering College</td>
       </tr>
       <tr>
-        <td>Raju G</td>
-        <td>CHRIST University</td>
-      </tr>
-      <tr>
-        <td>RAM KIRAN</td>
-        <td>SASTRA DEEMED UNIVERSITY</td>
-      </tr>
-      <tr>
         <td>Rama Krushna Rath</td>
         <td>Indian Institute of Information Technology, Sri City</td>
+      </tr>
+      <tr>
+        <td>RAMKIRAN B</td>
+        <td>SASTRA DEEMED UNIVERSITY</td>
       </tr>
       <tr>
         <td>Ravi Sankar Barpanda</td>
         <td>VIT-AP University</td>
       </tr>
       <tr>
-        <td>Reza Eslamipoor</td>
-        <td>Yazd</td>
-      </tr>
-      <tr>
         <td>Ricky Mohanty</td>
         <td>ASBM UNIVERSITY</td>
-      </tr>
-      <tr>
-        <td>Rimjhim Dr. Singh</td>
-        <td>Amrita vishwa vidyapeetham</td>
-      </tr>
-      <tr>
-        <td>Ripal D Ranpara</td>
-        <td>Atmiya University</td>
       </tr>
       <tr>
         <td>RITU RAJ</td>
@@ -948,87 +683,44 @@
         <td>CHRIST University</td>
       </tr>
       <tr>
-        <td>Rohit M Thanki</td>
-        <td>Senior IEEE Member</td>
-      </tr>
-      <tr>
         <td>Rohit Verma</td>
         <td>Intel Labs</td>
-      </tr>
-      <tr>
-        <td>Rosen Hristev</td>
-        <td>Paisii Hilendarski University of Plovdiv</td>
       </tr>
       <tr>
         <td>Sahana M Prabhu</td>
         <td>RBEI</td>
       </tr>
       <tr>
-        <td>Samrat Kumar Dey</td>
-        <td>Bangladesh Open University</td>
-      </tr>
-      <tr>
         <td>Sandeep Kumar</td>
         <td>CHRIST (Deemed to be University), Bangalore</td>
       </tr>
       <tr>
-        <td>Sandhya S</td>
-        <td>R. V. College of Engineering</td>
-      </tr>
-      <tr>
-        <td>Sanju V</td>
-        <td>REVA University</td>
-      </tr>
-      <tr>
         <td>santosh kumar</td>
-        <td>Maharishi Markandeshwar deemed to be university, mullana</td>
+        <td>Maharishi Markandeshwar deemed to be university , mullana</td>
       </tr>
       <tr>
         <td>Santosh Naik</td>
         <td>HITAM</td>
       </tr>
       <tr>
-        <td>Santosh K Satapathy</td>
-        <td>Pondicherry Engineering College, Puducherry</td>
-      </tr>
-      <tr>
-        <td>Santosh Kumar Satapathy</td>
-        <td>Pandit Deendayal Energy University</td>
-      </tr>
-      <tr>
         <td>Sara Ali</td>
         <td>Global Institute of Engineering and Technology</td>
       </tr>
       <tr>
-        <td>Saroj Hiranwal</td>
-        <td>Victorian Institute of Technology</td>
+        <td>Sarasvathi V</td>
+        <td>PES University</td>
       </tr>
       <tr>
         <td>Sharayu A Lokhande</td>
         <td>Army Institute Of Technology</td>
       </tr>
       <tr>
-        <td>shefali Jagwani</td>
-        <td>NMIT, Bangalore</td>
-      </tr>
-      <tr>
-        <td>Sheikh Imroza Manzoor</td>
-        <td>Central University of Jammu</td>
+        <td>Shylaja S S</td>
+        <td>PES University</td>
       </tr>
       <tr>
         <td>Smriti H Bhandari</td>
         <td>LF</td>
-      </tr>
-      <tr>
-        <td>Snigdha Sen</td>
-        <td>
-          Manipal Institute of Technology Bengaluru, Manipal Academy of Higher
-          Education, Manipal, India
-        </td>
-      </tr>
-      <tr>
-        <td>Sobhana N V</td>
-        <td>Rajiv Gandhi Institute of Technology, Kottayam</td>
       </tr>
       <tr>
         <td>SOHAN LAL GUPTA</td>
@@ -1039,10 +731,6 @@
         <td>Avantika University</td>
       </tr>
       <tr>
-        <td>Sourav Kanti Addya</td>
-        <td>NIT Karnataka</td>
-      </tr>
-      <tr>
         <td>Sridevi Saralaya</td>
         <td>SJEC</td>
       </tr>
@@ -1051,12 +739,8 @@
         <td>VNR VIGNANA JYOTHI INSTITUTE OF ENGINEERING AND TECHNOLOGY</td>
       </tr>
       <tr>
-        <td>Sujithra M</td>
-        <td>Coimbatore institute of technology</td>
-      </tr>
-      <tr>
-        <td>Surbhi Sharma</td>
-        <td>Manipal University Jaipur</td>
+        <td>Surabhi Narayan</td>
+        <td>PES University</td>
       </tr>
       <tr>
         <td>Swanirbhar Majumder</td>
@@ -1071,47 +755,16 @@
         <td>VISTAS</td>
       </tr>
       <tr>
-        <td>Usha J</td>
-        <td>RV College of Engineering</td>
-      </tr>
-      <tr>
         <td>Vatsala Anand</td>
         <td>Chitkara University</td>
-      </tr>
-      <tr>
-        <td>Veeraiah Duggineni</td>
-        <td>Lakireddy Bali Reddy College of Engineering (A)</td>
-      </tr>
-      <tr>
-        <td>Veeraswamy A</td>
-        <td>
-          Koneru Lakshmaiah Educational Foundation, Vaddeswaram, Guntur, Andhra
-          Pradesh, India
-        </td>
-      </tr>
-      <tr>
-        <td>Vijaya Prakash Rajanala</td>
-        <td>SR University</td>
       </tr>
       <tr>
         <td>Vikas Bajpai</td>
         <td>The LNMIIT</td>
       </tr>
       <tr>
-        <td>VIKAS SINGH</td>
-        <td>NATIONAL INSTITUTE OF TECHNOLOGY KARN ATAKA SURATHKAL</td>
-      </tr>
-      <tr>
-        <td>VIKAS VERMA</td>
-        <td>NETAJI SUBHAS UNIVERSITY OF TECHNOLOGY</td>
-      </tr>
-      <tr>
         <td>Vishal Moyal</td>
         <td>SVKM's Institute of Technology, Dhule</td>
-      </tr>
-      <tr>
-        <td>Waseem Ahmed</td>
-        <td>ABES Engineering College</td>
       </tr>
       <tr>
         <td>Yukata Watanobe</td>
