--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         })(jQuery); // end jQuery
     </script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 
     <!-- Header Start -->
     <header id="header">
@@ -164,7 +164,7 @@
     <!-- About Section Start-->
     <section id="about">
         <div class="container1">
-            <div class="card" id="card" style="height: 350px;">
+            <div class="card" id="card" style="height: 33rem; width: 40rem;">
                 <p class="add-info"><strong><span class='imp' style="font-size: 3pze
                     5px;">Important Dates</span></strong>
                 <p class="para">
@@ -175,6 +175,12 @@
                     <strong>Registration Due: </strong> November 1, 2024<br>
                     <strong>Conference Dates: </strong>December 5-7, 2024<br>
                     <strong>Venue: </strong> PES University, Bengaluru
+                  </p> <br>
+                <p class="add-info"><strong><span class='imp' style="font-size: 3pze
+                    5px;">Announcements </span></strong>
+                <p class="para">
+                    <strong>Author Notifications Sent:</strong><br>
+                    All paper submission decisions have been communicated to the authors.
                   </p>
                 <!-- <p><a href="https://docs.google.com/document/d/1CJ3bkDRkxrR5mujIvdYy0g0O8reSHiTNgxUclt4dGPM/edit" target="_blank">Author Instructions for eCopyright, Camera Ready Submission and Registration</a></p>
                 <p><a href="https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit" target="_blank" style="width: 100%;">Conference Schedule</a></p> -->
@@ -192,9 +198,6 @@
                         <div class="col-md-10">
 
                             <br>
-
-
-
 
                             <!-- <div>
                                             <img src="img/Abhyuday.jpg" width="250px" height="250px">
