Accepted Papers page updated. Home page updated providing link to accepted papers page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- #header end -->
 
     <!-- Banner Section Start-->
-    <section class="banner" style="height: 700px;">
+    <section class="banner" style="height: 750px;">
         <!-- <marquee class="notification">Deadline for Paper Submission has been Extended.</marquee> -->
         <div class="container">
             <div class="row">
@@ -164,7 +164,7 @@
     <!-- About Section Start-->
     <section id="about">
         <div class="container1">
-            <div class="card" id="card" style="height: 33rem; width: 40rem;">
+            <div class="card" id="card" style="height: 38rem; width: 40rem;">
                 <p class="add-info"><strong><span class='imp' style="font-size: 3pze
                     5px;">Important Dates</span></strong>
                 <p class="para">
@@ -180,8 +180,10 @@
                     5px;">Announcements </span></strong>
                 <p class="para">
                     <strong>Author Notifications Sent:</strong><br>
-                    All paper submission decisions have been communicated to the authors.
+                    All paper submission decisions have been communicated to the authors. Click on the button below to check the accepted papers of the conference.
                   </p>
+                  <br> 
+                  <button class="accept-btn"><a href="accepted-papers.html">Click Here</a></button>
                 <!-- <p><a href="https://docs.google.com/document/d/1CJ3bkDRkxrR5mujIvdYy0g0O8reSHiTNgxUclt4dGPM/edit" target="_blank">Author Instructions for eCopyright, Camera Ready Submission and Registration</a></p>
                 <p><a href="https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit" target="_blank" style="width: 100%;">Conference Schedule</a></p> -->
             </div>
