Registration link added

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <!-- About Section Start-->
     <section id="about">
         <div class="container1">
-            <div class="card" id="card" style="height: 38rem; width: 40rem;">
+            <div class="card" id="card" style="height: 45rem; width: 40rem;">
                 <p class="add-info"><strong><span class='imp' style="font-size: 3pze
                     5px;">Important Dates</span></strong>
                 <p class="para">
@@ -172,7 +172,8 @@
                     <strong>Full Paper Submission Deadline:  </strong>July 31, 2024(Hard Deadline)<br>
                     <strong>Notification of Acceptance: </strong>September 30, 2024<br>
                     <strong>Camera Ready Submission: </strong>October 20, 2024<br>
-                    <strong>Registration Due: </strong> November 1, 2024<br>
+                    <strong>Author Instructions- eCopyright, Camera Ready Submissions and Registration: </strong> November 1, 2024<br>
+                    <strong>Early Bird Registration Due: </strong>October 25, 2024<br>
                     <strong>Conference Dates: </strong>December 5-7, 2024<br>
                     <strong>Venue: </strong> PES University, Bengaluru
                   </p> <br>
@@ -180,10 +181,14 @@
                     5px;">Announcements </span></strong>
                 <p class="para">
                     <strong>Author Notifications Sent:</strong><br>
-                    All paper submission decisions have been communicated to the authors. Click on the button below to check the accepted papers of the conference.
+                    All paper submission decisions have been communicated to the authors. <a href="accepted-papers.html" id="author-instructions">Click here</a> to check the accepted papers of the conference.
+                  </p> 
+                <p class="para">
+                    <a href="https://docs.google.com/document/d/1jR0BXeYd12T0WyUSp_Gni5rZeHB3PamrbYfQ_08umi8/edit" id="author-instructions" target="_blank">Click Here</a>
+                    to know more about the Author Guidelines.
                   </p>
                   <br> 
-                  <button class="accept-btn"><a href="accepted-papers.html">Click Here</a></button>
+                  <button class="accept-btn"><a href="https://in.explara.com/e/2024-3rd-international-conference-on-data-decision-and-systems-icdds" target="_blank">Register for ICDDS 2024 Now!</a></button>
                 <!-- <p><a href="https://docs.google.com/document/d/1CJ3bkDRkxrR5mujIvdYy0g0O8reSHiTNgxUclt4dGPM/edit" target="_blank">Author Instructions for eCopyright, Camera Ready Submission and Registration</a></p>
                 <p><a href="https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit" target="_blank" style="width: 100%;">Conference Schedule</a></p> -->
             </div>
