--- a/registration.html
+++ b/registration.html
@@ -246,6 +246,16 @@
         </tr>
       </tbody>
     </table>
+
+    <p style="text-align: center; font-size:large"> <strong>Author Instructions- eCopyright, Camera Ready Submissions and Registration: </strong> November 1, 2024</p>
+    <p style="text-align: center; font-size:large"> <strong>Early bird Registration Due: </strong> October 25, 2024</p>
+    <p class="para" style="text-align: center; font-size:large">
+      <a href="https://docs.google.com/document/d/1jR0BXeYd12T0WyUSp_Gni5rZeHB3PamrbYfQ_08umi8/edit" id="author-instructions" target="_blank">Click Here</a>
+      to know more about the Author Guidelines.
+    </p>
+    <br> 
+    <button class="accept-btn" style="display: block; margin: 0 auto; padding:0.8rem 0.8rem" id="accept-btn-reg"><a href="https://in.explara.com/e/2024-3rd-international-conference-on-data-decision-and-systems-icdds" target="_blank">Register for ICDDS 2024 Now!</a></button>
+    <br> <br>
     <!-- Contact Section Start -->
     <!--
         2022 Registration Page 
