Registration link added

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <strong>Full Paper Submission Deadline:  </strong>July 31, 2024(Hard Deadline)<br>
                     <strong>Notification of Acceptance: </strong>September 30, 2024<br>
                     <strong>Camera Ready Submission: </strong>October 20, 2024<br>
-                    <strong>Author Instructions- eCopyright, Camera Ready Submissions and Registration: </strong> November 1, 2024<br>
+                    <strong>Author Instructions- eCopyright, Camera Ready Submissions <br> and Registration: </strong> November 1, 2024<br>
                     <strong>Early Bird Registration Due: </strong>October 25, 2024<br>
                     <strong>Conference Dates: </strong>December 5-7, 2024<br>
                     <strong>Venue: </strong> PES University, Bengaluru
