Minor changes to the Registration page

--- a/registration.html
+++ b/registration.html
@@ -247,8 +247,8 @@
       </tbody>
     </table>
 
-    <p style="text-align: center; font-size:large"> <strong>Author Instructions- eCopyright, Camera Ready Submissions and Registration: </strong> November 1, 2024</p>
-    <p style="text-align: center; font-size:large"> <strong>Early bird Registration Due: </strong> October 25, 2024</p>
+    <p style="text-align: center; font-size:large"> <strong>Early Bird Registration Due: </strong> October 25, 2024</p>
+    <p style="text-align: center; font-size:large"> <strong>Final Registration: </strong> November 1, 2024</p>
     <p class="para" style="text-align: center; font-size:large">
       <a href="https://docs.google.com/document/d/1jR0BXeYd12T0WyUSp_Gni5rZeHB3PamrbYfQ_08umi8/edit" id="author-instructions" target="_blank">Click Here</a>
       to know more about the Author Guidelines.
