--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <!-- About Section Start-->
     <section id="about">
         <div class="container1">
-            <div class="card" id="card" style="height: 45rem; width: 40rem;">
+            <div class="card" id="card" style="width: 40rem;">
                 <p class="add-info"><strong><span class='imp' style="font-size: 3pze
                     5px;">Important Dates</span></strong>
                 <p class="para">
@@ -172,8 +172,8 @@
                     <strong>Full Paper Submission Deadline:  </strong>July 31, 2024(Hard Deadline)<br>
                     <strong>Notification of Acceptance: </strong>September 30, 2024<br>
                     <strong>Camera Ready Submission: </strong>October 20, 2024<br>
-                    <strong>Author Instructions- eCopyright, Camera Ready Submissions <br> and Registration: </strong> November 1, 2024<br>
                     <strong>Early Bird Registration Due: </strong>October 25, 2024<br>
+                    <strong>Final Registration: </strong> November 1, 2024<br>
                     <strong>Conference Dates: </strong>December 5-7, 2024<br>
                     <strong>Venue: </strong> PES University, Bengaluru
                   </p> <br>
