--- a/index.html
+++ b/index.html
@@ -129,35 +129,22 @@
 
     <!-- Banner Section Start-->
     <section class="banner" style="height: 750px;">
-        <!-- <marquee class="notification">Deadline for Paper Submission has been Extended.</marquee> -->
         <div class="container">
-            <div class="row">
-                <div class="row">
-                    <div class="col-md-12" style="padding: 0;">
-                        <h1 class="banner1-header1">
-                            <img src="img/logo.png" class="logo" width="200px">
-                            <img src="img/IEEE-CS-BangaloreChapterOrange.png" background="white" width="200px"><br><br>
-                            2024 3rd International Conference on Data, Decision and Systems
-
-                        </h1>
-                        <h2 style="text-align: center; color: #ddd;">December 5-7, 2024</h2>
-                        <h3 style="text-align: center; color: #ddd;">In-person Conference | PES University, Bengaluru,
-                            India
-                        </h3>
-                    </div>
-                    <!-- <div class="col-md-6">
-                            <p class="banner-nav">
-                                <span class="banner-box">
-                                    <a href="/">Home</a>
-                                    <a href="Program-Committee.html">Organizing Committee</a>
-                                </span>
-                            </p>
-                        </div> -->
+            <div class="row justify-content-center text-center">
+                <div class="col-md-12 col-sm-12" style="padding: 0;">
+                    <h1 class="banner1-header1">
+                        <img src="img/logo.png" class="logo img-fluid" style="max-width: 150px;">
+                        <img src="img/IEEE-CS-BangaloreChapterOrange.png" class="img-fluid" style="max-width: 150px;">
+                        <br><br>
+                        2024 3rd International Conference on Data, Decision and Systems
+                    </h1>
+                    <h2 style="text-align: center; color: #ddd;">December 5-7, 2024</h2>
+                    <h3 style="text-align: center; color: #ddd;">In-person Conference | PES University, Bengaluru, India</h3>
                 </div>
             </div>
         </div>
-        </div>
     </section>
+    
     <!-- Banner Section end -->
 
 
