Keynote speakers added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- #header end -->
 
     <!-- Banner Section Start-->
-    <section class="banner" style="height: 750px;">
+    <section class="banner" style="height: 750px; width:100%">
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-md-12 col-sm-12" style="padding: 0;">
@@ -139,7 +139,7 @@
                         2024 3rd International Conference on Data, Decision and Systems
                     </h1>
                     <h2 style="text-align: center; color: #ddd;">December 5-7, 2024</h2>
-                    <h3 style="text-align: center; color: #ddd;">In-person Conference | PES University, Bengaluru, India</h3>
+                    <h3 class="conference-info" style="text-align: center; color: #ddd;">In-person Conference | PES University, Bengaluru, India</h3>
                 </div>
             </div>
         </div>
