--- a/speakers.html
+++ b/speakers.html
@@ -196,36 +196,26 @@
                     <h3>Speakers</h3>
                 </center>
             </div>
-            <p class="para" style="font-size: 25px; color:rgb(239, 151, 9); font-weight:500; text-align:center">Coming Soon!</p>
-            <!-- <div class="row">
-
+            <!-- <p class="para" style="font-size: 25px; color:rgb(239, 151, 9); font-weight:500; text-align:center">Coming Soon!</p> -->
+            <div class="row">
                 <div class="col-md-10">
                     <section id="indexspeaker">
                         <div class="container">
                             <header class="section-header">
-                                <h3>ICDDS 2023 Keynote Speakers</h3>
+                                <h3>ICDDS 2024 Keynote Speakers</h3>
                             </header>
                             <div class="image-holder">
                                  <div>
-                                    <img src="img/snehansu.png" width="250px" height="250px">
-                                    <p class="commitee-names">Snehanshu Saha</p>
-                                    <p class="position">BITS PILANI K K Birla Goa Campus</p>
+                                    <img src="img/lalit1.jpg" width="250px" height="250px">
+                                    <p class="commitee-names">Dr. Lalit Kumar Singh</p>
+                                    <p class="position">Scientist and Head of Artificial Intelligence Applications, BARC, Mumbai</p>
                                 </div>
                                 <div>
-                                    <img src="img/caleb.jpeg" width="250px" height="250px">
-                                    <p class="commitee-names">Dr. Caleb Ronald Munigety</p>
-                                    <p class="position">Head, Mobility Think-tank, Bosch, India</p>
+                                    <img src="img/bsdsagar1.jpg" width="250px" height="250px">
+                                    <p class="commitee-names">B.S. Daya Sagar</p>
+                                    <p class="position">Professor and Head, Indian Statistical Institute, Bangalore</p>
                                 </div>
-
-                                <div>
-                                  <img src="img/vln.jpg" width="250px" height="250px">
-                                  <p class="commitee-names">PROF. VLN Simhan</p>
-                                  <p class="position">Southern Georgia University, USA</p>
-                              </div>
-
-
-
-                            </div> -->
+                            </div>
 
                         </div>
                     </section>
