--- a/speakers.html
+++ b/speakers.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Speeaker | ICDDS</title>
+    <title>Speaker | ICDDS</title>
     <meta
       name="keywords"
       content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
@@ -202,7 +202,7 @@
                     <section id="indexspeaker">
                         <div class="container">
                             <header class="section-header">
-                                <h3>ICDDS 2024 Keynote Speakers</h3>
+                                <h3>Keynote Speakers</h3>
                             </header>
                             <div class="image-holder">
                                  <div>
@@ -214,6 +214,34 @@
                                     <img src="img/bsdsagar1.jpg" width="250px" height="250px">
                                     <p class="commitee-names">B.S. Daya Sagar</p>
                                     <p class="position">Professor and Head, Indian Statistical Institute, Bangalore</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <br><br>
+                        <div class="container">
+                            <header class="section-header">
+                                <h3>Talks by Industry Chairs / Data Challenge Chairs</h3>
+                            </header>
+                            <div class="image-holder">
+                                 <div>
+                                    <img src="img/sujith_samuel.jpeg" width="250px" height="250px">
+                                    <p class="commitee-names">Sujith Samuel
+                                    </p>
+                                    <p class="position">Chief AI/ML Engineer, Nokia</p>
+                                    <!-- <p class="position"><strong style="font-weight: 700;">Session Title:</strong> Tools for AI Research Enablement in 3GPP Standards</p> -->
+                                </div>
+                                <div>
+                                    <img src="img/ajay.jpg" width="250px" height="250px">
+                                    <p class="commitee-names">Dr. Ajay Kattepur</p>
+                                    <p class="position">Senior Researcher, Ericsson Research</p>
+                                    <!-- <p class="position"><strong style="font-weight: 700;">Session Title:</strong> AI Techniques for  Advanced Cellular Radio and Network Management</p> -->
+                                </div>
+                                <div> 
+                                    <img src="img/prayag_gowgi.jpeg" width="250px" height="250px">
+                                    <p class="commitee-names">Dr. Prayag Gowgi</p>
+                                    <p class="position">Senior Researcher, Ericsson Research</p>
+                                    <!-- <p class="position"><strong style="font-weight: 700;">Session Title:</strong> AI Techniques for  Advanced Cellular Radio and Network Management</p> -->
                                 </div>
                             </div>
 
