Industry speakers heading changed

--- a/speakers.html
+++ b/speakers.html
@@ -221,7 +221,7 @@
                         <br><br>
                         <div class="container">
                             <header class="section-header">
-                                <h3>Talks by Industry Chairs / Data Challenge Chairs</h3>
+                                <h3>Industry Workshops - Invited Speakers</h3>
                             </header>
                             <div class="image-holder">
                                  <div>
