Industry speakers added

--- a/speakers.html
+++ b/speakers.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Speaker | ICDDS</title>
+    <title>Speakers | ICDDS</title>
     <meta
       name="keywords"
       content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
@@ -200,52 +200,71 @@
             <div class="row">
                 <div class="col-md-10">
                     <section id="indexspeaker">
-                        <div class="container">
-                            <header class="section-header">
-                                <h3>Keynote Speakers</h3>
-                            </header>
-                            <div class="image-holder">
-                                 <div>
-                                    <img src="img/lalit1.jpg" width="250px" height="250px">
-                                    <p class="commitee-names">Dr. Lalit Kumar Singh</p>
-                                    <p class="position">Scientist and Head of Artificial Intelligence Applications, BARC, Mumbai</p>
-                                </div>
-                                <div>
-                                    <img src="img/bsdsagar1.jpg" width="250px" height="250px">
-                                    <p class="commitee-names">B.S. Daya Sagar</p>
-                                    <p class="position">Professor and Head, Indian Statistical Institute, Bangalore</p>
-                                </div>
-                            </div>
-
+                      <div class="container">
+                        <header class="section-header" >
+                            <h3>Keynote Speakers</h3>
+                        </header>
+                        <div class="image-holder">
+                          <div>
+                            <img src="img/lalit1.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Dr. Lalit Kumar Singh</p>
+                            <p class="position">Scientist and Head of Artificial Intelligence Applications, BARC, Mumbai</p>
                         </div>
+                        <div>
+                            <img src="img/bsdsagar1.jpg" width="250px" height="250px">
+                            <p class="commitee-names">B.S. Daya Sagar</p>
+                            <p class="position">Professor and Head, Indian Statistical Institute, Bangalore</p>
+                        </div>
+                        </div>
+                    </div>  
                         <br><br>
-                        <div class="container">
-                            <header class="section-header">
-                                <h3>Industry Workshops - Invited Speakers</h3>
-                            </header>
-                            <div class="image-holder">
-                                 <div>
-                                    <img src="img/sujith_samuel.jpeg" width="250px" height="250px">
-                                    <p class="commitee-names">Sujith Samuel
-                                    </p>
-                                    <p class="position">Chief AI/ML Engineer, Nokia</p>
-                                    <!-- <p class="position"><strong style="font-weight: 700;">Session Title:</strong> Tools for AI Research Enablement in 3GPP Standards</p> -->
-                                </div>
-                                <div>
-                                    <img src="img/ajay.jpg" width="250px" height="250px">
-                                    <p class="commitee-names">Dr. Ajay Kattepur</p>
-                                    <p class="position">Senior Researcher, Ericsson Research</p>
-                                    <!-- <p class="position"><strong style="font-weight: 700;">Session Title:</strong> AI Techniques for  Advanced Cellular Radio and Network Management</p> -->
-                                </div>
-                                <div> 
-                                    <img src="img/prayag_gowgi.jpeg" width="250px" height="250px">
-                                    <p class="commitee-names">Dr. Prayag Gowgi</p>
-                                    <p class="position">Senior Researcher, Ericsson Research</p>
-                                    <!-- <p class="position"><strong style="font-weight: 700;">Session Title:</strong> AI Techniques for  Advanced Cellular Radio and Network Management</p> -->
-                                </div>
-                            </div>
-
-                        </div>
+                        <div class="container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+                          <header class="section-header" style="width: 100%; text-align: center;">
+                              <h3>Industry Workshops - Invited Speakers</h3>
+                          </header>
+                          <div class="image-holder" style="display: flex; flex-wrap: wrap; gap: 50px; justify-content: center;">
+                              <div style="text-align: center;">
+                                  <img src="img/sujith_samuel.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Sujith Samuel</p>
+                                  <p class="position">Chief AI/ML Engineer, Nokia</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/ajay.jpg" width="250px" height="250px">
+                                  <p class="commitee-names">Dr. Ajay Kattepur</p>
+                                  <p class="position">Senior Researcher, Ericsson Research</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/prayag_gowgi.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Dr. Prayag Gowgi</p>
+                                  <p class="position">Senior Researcher, Ericsson Research</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/manikandan.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Manikandan Ravikiran</p>
+                                  <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/ananth.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Ananth Ganesh</p>
+                                  <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/sheetal.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Sheetal Kumar</p>
+                                  <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/Nilanjan .jpg" width="250px" height="250px">
+                                  <p class="commitee-names">Nilanjan Chakrovorthy</p>
+                                  <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/sentil.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names" style="font-size: 1.2rem; margin: 5px 0;">Senthil Raja</p>
+                                  <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
+                              </div>
+                          </div>
+                      </div>                                         
                     </section>
                     <br>
                     
